// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataListItem renders correctly 1`] = `
<vlayout-stub tag="li" wrap="true" class="vd-data-list-item flex-grow-0">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="">
      <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
        Test
      </div>
      <div class="vd-data-list-item-value"><span class="text-body-1">…</span></div>
    </div>
    <!---->
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly in row mode 1`] = `
<vlayout-stub tag="li" wrap="true" class="vd-data-list-item flex-grow-0">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="vd-row">
      <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
        Test
      </div>
      <div class="vd-data-list-item-value"><span class="text-body-1">value</span></div>
    </div>
    <vbtn-stub color="accent" tag="button" activeclass="" small="true" text="true" type="button" class="vd-data-list-item-action-btn text-body-1 text-none pa-0">
      Action
    </vbtn-stub>
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly value in a chip 1`] = `
<vlayout-stub tag="li" wrap="true" class="vd-data-list-item flex-grow-0">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="">
      <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
        Test
      </div>
      <div class="vd-data-list-item-value">
        <vchip-stub activeclass="" tag="span" active="true" closeicon="$delete" filtericon="$complete" class="mt-1">
          value
        </vchip-stub>
      </div>
    </div>
    <!---->
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly with a value 1`] = `
<vlayout-stub tag="li" wrap="true" class="vd-data-list-item flex-grow-0">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="">
      <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
        Test
      </div>
      <div class="vd-data-list-item-value"><span class="text-body-1">value</span></div>
    </div>
    <!---->
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly with an action 1`] = `
<vlayout-stub tag="li" wrap="true" class="vd-data-list-item flex-grow-0">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="">
      <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
        Test
      </div>
      <div class="vd-data-list-item-value"><span class="text-body-1">…</span></div>
    </div>
    <vbtn-stub color="accent" tag="button" activeclass="" small="true" text="true" type="button" class="vd-data-list-item-action-btn text-body-1 text-none pa-0">
      action
    </vbtn-stub>
  </div>
</vlayout-stub>
`;
